syntax = "proto3";

package cs.common.conn.protocol;

message ChatMessage {
    /*required <-proto2*/ int32 id = 1;
    string text = 2;
    //timestamp
    //short text

    enum MessageType {
        NORMAL = 0;
        URGENT = 1;
        EVENT_SETTER = 2;
        EVENT_DELETER = 3;
        TEST = 14;
    }

    MessageType type = 15;
}

message ChatHistory {
    repeated ChatMessage messages = 1;
}